--- a/csv-consumer-log/pom.xml
+++ b/csv-consumer-log/pom.xml
@@ -3,14 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>fr.alex</groupId>
+	<groupId>com.example.demo.consumerlog</groupId>
 	<artifactId>csv-consumer-log</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>csv-consumer-log</name>
 	<description>CSV consumer log</description>
-
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
